--- a/styles.css
+++ b/styles.css
@@ -1,181 +1,235 @@
-  @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
-*{
+* {
     box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;
     color: white;
 }
-.top{
-    background: rgba(0,0,0,0.2)url("assets/Title-Image.png");
-    background-blend-mode: darken;
-      
+
+body {
+    background-color: black;
 }
-section{
-    height: "337px";
-    width: "599px";
+
+/* Top Section */
+.top {
+    background: rgba(0, 0, 0, 0.7) url("assets/Title-Image.png") no-repeat center center/cover;
+    padding-bottom: 20px;
 }
-nav{
+
+nav {
     height: 100px;
     display: flex;
-    width: 100%;
     justify-content: space-between;
     align-items: center;
+    padding: 0 50px;
 }
-nav ul{
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.nav-bar{
-    display: flex;
-}
-.logo{
-    width: 15%;
-    margin: 30px;
-}
-nav ul li{
-    margin: 10px;    
-}
-.menu{
-    margin: 18px;
-}
-.menu li{
-    margin: 15px;
-}
-.title .name{
-    font-size: 100px;
-    font-weight: 300;    
-}
-.play-btn{
-    margin: 20px 20px;
-    display: flex;
-    padding: 4px 13px;
-    align-items: center;
-    border: 1px solid white;
-    border-radius: 5px;
-}
-.play-btn p{
-    margin: 5px;
-    color: black;
-    font-size: 15px;
-}
-.info-btn{
-    margin: 20px 20px;
-    display: flex;
-    padding: 4px 13px;
-    align-items: center;
-    border: 0px solid white;
-    border-radius: 5px;
-    background-color: rgba(250,250,250,0.5);
-}
-.info-btn p{
-    margin: 5px;
-    color: white;
-    font-size: 15px;
-    
-}
-.name-buttons{
-    display: flex;
-}
-.title{
-    margin-left: 46px;
-    margin-top: 198px;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    align-items: left;
-}
-.show{
-    display: flex;
-    align-items: end;
 
-}
-.show img{
-    margin: 8px;
-}
-.show p{
-    margin: 10px;
-    letter-spacing: 5px;
-}
-.See-again-head{
+.nav-bar ul, .menu ul {
+    list-style: none;
     display: flex;
     align-items: center;
 }
-.middle{
-    background-color: rgb(20,20,20);
+
+.nav-bar li, .menu li {
+    margin: 0 15px;
 }
-.images{
+
+.logo {
+    width: 120px;
+}
+
+.menu img {
+    width: 25px;
+    margin-left: 15px;
+    cursor: pointer;
+}
+
+.title {
+    padding: 150px 50px 20px;
+    text-align: left;
+}
+
+.title .name {
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.name-buttons {
     display: flex;
-    justify-content: space-evenly;
+    gap: 20px;
+    margin-top: 20px;
 }
-.images img{
-    width: 210px;
-    margin-left: 20px;
+
+button {
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
 }
-.top .footer{
-    margin-top: 100px;
-    margin-left: 46px;
+
+button img {
+    margin-right: 10px;
 }
-.foot-bottom{
+
+.play-btn {
+    background: white;
+    color: black;
+}
+
+.info-btn {
+    background: rgba(255, 255, 255, 0.2);
+    color: white;
+}
+
+/* Footer Section in Top */
+.footer {
+    padding: 20px 50px;
+}
+
+.foot-bottom {
     display: flex;
     justify-content: space-between;
-}.foot-bottom img{
-    margin: 20px 20px;
+    align-items: center;
 }
-#top10{
-    position: relative;
-    left: 255px;
-    top: 50px;
+
+.foot-bottom img {
+    cursor: pointer;
+    width: 30px;
 }
-.topTen .images img{
-    height: 146px;
-    width: 100px;
+
+/* Middle Section */
+.middle {
+    background-color: rgb(20, 20, 20);
+    padding: 50px 50px;
 }
-.topTen .rank{
+
+.heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.heading p {
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+.images {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: flex-start;
+}
+
+.images img {
+    width: 200px;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.images img:hover {
+    transform: scale(1.05);
+}
+
+.rank {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.rank img:first-child {
+    width: 50px;
+}
+
+/* Footer Section */
+footer {
+    background-color: rgb(20, 20, 20);
+    padding: 50px;
+    color: rgb(128, 128, 128);
+    text-align: center;
+}
+
+footer .socials {
     display: flex;
     justify-content: center;
-    margin: 10px;
+    gap: 20px;
+    margin-bottom: 20px;
 }
-footer{
-    background-color: rgb(20,20,20);
-    padding: 20px 20px;
+
+footer .socials img {
+    width: 30px;
+    cursor: pointer;
 }
-.socials{
+
+footer .artists {
     display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-bottom: 20px;
 }
-.socials img{
-    margin: 10px;
-}
-.bottom{
-    width: 70%;
-    margin: auto;
-}
-.artists ul li{
-    color: rgb(128,128,128);
+
+footer .artists ul {
     list-style: none;
-    margin: 20px 8px;
 }
-.artists{
-    display: flex;
-    justify-content: space-between;
+
+footer .artists ul li {
+    margin-bottom: 10px;
 }
-.highlight{
-    color: rgb(128,128,128);
-    border: 2px solid rgb(128,128,128);
-    padding: 10px 10px;
-    max-width: fit-content;
-    margin: 20px 8px;
+
+footer .highlight {
+    display: inline-block;
+    padding: 10px 20px;
+    border: 1px solid rgb(128, 128, 128);
+    margin-bottom: 20px;
+    cursor: pointer;
 }
-.copyright{
-    color: rgb(128,128,128);
-    margin: 20px 8px;
+
+footer .copyright {
+    margin-top: 20px;
 }
-.heading{
-    display: flex;
-    margin-top: 25px;
-    margin-left: 46px;
-    align-items: center;
+
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+    .nav-bar ul, .menu ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav {
+        flex-direction: column;
+        height: auto;
+        padding: 20px;
+    }
+
+    .title {
+        padding: 100px 20px 10px;
+    }
+
+    .title .name {
+        font-size: 2.5rem;
+    }
+
+    .images img {
+        width: 150px;
+    }
+
+    .socials img {
+        width: 25px;
+    }
+
+    .artists {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer {
+        padding: 30px 20px;
+    }
 }
